fix .99 | update docs
